# ZGloom

./: README.md  renderer.cpp
source/: CMakeLists.txt  Cheats.cpp  ConfigAmbienceImpl.cpp  ConfigOverlays.cpp  ConfigOverlays.h  MenuAdapters.cpp  ZGloom.vcxproj  config.cpp  config.h  config.txt  decrunchmania.cpp  gamelogic.cpp  hud.cpp  hud.h  menuscreen.cpp  menuscreen.h  monsterlogic.cpp  renderer.cpp  titlescreen.cpp  zgloom.cpp
source/audio/: AtmosphereVolume.cpp  AtmosphereVolume.h  EmbeddedBGM.cpp  EmbeddedBGM.h
source/cheats/: Cheats.cpp  Cheats.h
source/effects/: BlobShadowToggle.cpp  BlobShadowToggle.h  MuzzleFlashFX.h  RendererHooks.cpp  RendererHooks.h
source/gameplay/: MuzzleOriginFix.h
